--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,16 +1,14 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: novigotechnology # Your GitHub organization or username, where this repository lives
+repo: uptime-nagus # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: WWW
+    url: https://www.nagus.app
+  - name: Demo
+    url: https://demo.nagus.app
+  - name: Docs
+    url: https://docs.nagus.app
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
