--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,13 +2,22 @@
 owner: novigotechnology # Your GitHub organization or username, where this repository lives
 repo: uptime-nagus # The name of this repository
 
+skipDescriptionUpdate: true
+skipTopicsUpdate: true
+skipHomepageUpdate: true
+
 sites:
   - name: WWW
     url: https://www.nagus.app
-  - name: Demo
+  - name: Sitio de Demo
     url: https://demo.nagus.app
+    icon: https://demo.nagus.app/assets/nagus/images/Logo_Nagus_1024x1024.png
   - name: Docs
     url: https://docs.nagus.app
+    icon: https://docs.nagus.app/assets/frappe/images/frappe-favicon.svg
+assignees: # Users to assign downtime issues (optional)
+  - earona
+
 
 status-website:
   theme: dark
@@ -17,11 +26,12 @@ status-website:
   #cname: demo.upptime.js.org
   baseUrl: /uptime-nagus
   logoUrl: https://raw.githubusercontent.com/novigotechnology/uptime-nagus/master/assets/Logo_Nagus_512x512.png
+  favicon: https://raw.githubusercontent.com/novigotechnology/uptime-nagus/master/assets/Logo_Nagus_512x512.png
   name: Nagus Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: Status
+    - title: Nagus Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
