--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,12 +2,8 @@
 owner: novigotechnology # Your GitHub organization or username, where this repository lives
 repo: uptime-nagus # The name of this repository
 
-skipDescriptionUpdate: true
-skipTopicsUpdate: true
-skipHomepageUpdate: true
-
 sites:
-  - name: WWW
+  - name: Web 
     url: https://www.nagus.app
   - name: Sitio de Demo
     url: https://demo.nagus.app
@@ -29,12 +25,16 @@ status-website:
   favicon: https://raw.githubusercontent.com/novigotechnology/uptime-nagus/master/assets/Logo_Nagus_512x512.png
   name: Nagus Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introMessage: This is a status page which uses **real-time** data. No server required
   navbar:
     - title: Nagus Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+
+#skipDescriptionUpdate: true
+#skipTopicsUpdate: true
+#skipHomepageUpdate: true
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
