--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,8 +19,8 @@ status-website:
   theme: dark
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  #cname: demo.upptime.js.org
-  baseUrl: /uptime-nagus
+  cname: status.nagus.app
+  #baseUrl: /uptime-nagus
   logoUrl: https://raw.githubusercontent.com/novigotechnology/uptime-nagus/master/assets/Logo_Nagus_512x512.png
   favicon: https://raw.githubusercontent.com/novigotechnology/uptime-nagus/master/assets/Logo_Nagus_512x512.png
   name: Nagus Status
