--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -24,7 +24,8 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/novigotechnology/uptime-nagus/master/assets/Logo_Nagus_512x512.png
   favicon: https://raw.githubusercontent.com/novigotechnology/uptime-nagus/master/assets/Logo_Nagus_512x512.png
   name: Nagus Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  #introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  introTitle: ""
   introMessage: This is a status page which uses **real-time** data. No server required
   navbar:
     - title: Nagus Status
